--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # Created by .ignore support plugin (hsz.mobi)
 .gitignore
 node_modules/karma/node_modules/ws/build/Release/obj.target/
+.idea/workspace.xml
